--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
         </div>
         <h1>OLIVE STORE</h1>   
     <nav>
-      <a href="home.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="watches.html">WATCHES</a>
       <a href="laptops.html">LAPTOPS</a>
       <a href="mobiles.html">MOBILES</a>
