--- a/index.html
+++ b/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - MyShop</title>
-  <link rel="stylesheet" href="style1.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-commerce</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  <header>
-    <h1>🛍 MyShop</h1>
-  </header>
+    <header>
+        <div id="user-display">
+        <h2></h2>
+        </div>
+        <h1> OLIVE STORE</h1>   
+    <nav>
+      <a href="index.html">HOME</a>
+      <a href="watches.html">WATCHES</a>
+      <a href="laptops.html">LAPTOPS</a>
+      <a href="mobiles.html">MOBILES</a>
+      <a href="cart.html">CART</a>
+    </nav>
+    </header>
+    <section class="main">
+        <h4>Welcome to MyShop!!!</h4>
+        <p>FIND BEST DEALS ON TOP PRODUCTS</p>
+        <a href="selector.html" class="btn">SHOP ME</a>
 
-  <section class="login-container">
-    <h2>Login to Your Account</h2>
-    <form id="loginForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <p>Don’t have an account? <a href="#">Sign Up</a></p>
-  </section>
+    </section>
+<section class="whychooseus">
+<h2>Why Choose Us?</h2>
+<ul class="points">
+    <li> High Quality Products</li>
+     <li>Best Price Guarantee</li>
+      <li>Fast And Secure Delivery</li>
+       <li>24/7 Customer Support</li>
+        <li>Easy Returns And Refunds</li>
+</ul>
+</section>
 
-  <script src="script1.js"></script>
-</body>
+    <footer>
+        <p>© 2025 MyShop. All Rights Reserved.</p>
+    </footer>
+<script>
+    let user = localStorage.getItem("loginUser");
+
+if (user) {
+  document.getElementById("user-display").innerText = "Welcome, " + user;
+}
+</script>
 </html>
