--- a/watches.html
+++ b/watches.html
@@ -13,7 +13,7 @@
       <h1>OLIVE STORE</h1>
     </div>
     <nav>
-      <a href="home.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="watches.html">WATCHES</a>
       <a href="laptops.html">LAPTOPS</a>
       <a href="mobiles.html">MOBILES</a>
