--- a/laptops.html
+++ b/laptops.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Laptops - MyShop</title>
   <link rel="stylesheet" href="style1.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
   <header>
@@ -12,8 +15,7 @@
     
         </div>
     <div style="display:flex;align-items:center;gap:12px;">
-      <img src="/mnt/data/b707dae1-1ab4-4e31-8d52-ef1fb87a541f.png" alt="logo" style="height:42px;">
-      <h1>OLIVE STORE</h1>
+      <h1> OLIVE STORE</h1>
     </div>
     <nav>
       <a href="index.html">HOME</a>
@@ -29,21 +31,24 @@
       <img src="https://images.unsplash.com/photo-1729370775808-aab21a6b7039?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HP Laptop">
       <h3>HP Laptop</h3>
       <p>$800</p>
-      <button onclick="addtocart('HP Laptop', 800)">Add to Cart</button>
+     <button class="btn btn-success" onclick="addtocart('Dell Laptop', 900)">Add to Cart</button>
+
     </div>
 
     <div class="product">
       <img src="https://images.unsplash.com/photo-1588872657578-7efd1f1555ed?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Dell Laptop">
       <h3>Dell Laptop</h3>
       <p>$900</p>
-      <button onclick="addtocart('Dell Laptop', 900)">Add to Cart</button>
+ <button class="btn btn-success" onclick="addtocart('Dell Laptop', 900)">Add to Cart</button>
+
     </div>
 
     <div class="product">
       <img src="https://images.unsplash.com/photo-1525547719571-a2d4ac8945e2?q=80&w=764&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Lenovo Laptop">
       <h3>Lenovo Laptop</h3>
       <p>$750</p>
-      <button onclick="addtocart('Lenovo Laptop', 750)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('Lenovo Laptop', 750)">Add to Cart</button>
+
     </div>
   </section>
 
