--- a/mobiles.html
+++ b/mobiles.html
@@ -3,18 +3,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mobiles - MyShop</title>
+  <title>Mobiles</title>
+
+  <!-- Your CSS -->
   <link rel="stylesheet" href="style1.css" />
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
   <header>
-       <div id="user-display">
-        <h2></h2>
-        </div>
-    <div style="display:flex;align-items:center;gap:12px;">
-      <img src="/mnt/data/b707dae1-1ab4-4e31-8d52-ef1fb87a541f.png" alt="logo" style="height:42px;">
-      <h1>OLIVE STORE</h1>
+    <div id="user-display">
+      <h2></h2>
     </div>
+    <div style="display:flex;align-items:center;gap:12px;">
+      <h1> OLIVE STORE</h1>
+    </div>
+
     <nav>
       <a href="index.html">HOME</a>
       <a href="watches.html">WATCHES</a>
@@ -25,26 +33,28 @@
   </header>
 
   <section class="products">
+
     <div class="product">
-     <img src="https://images.unsplash.com/photo-1592750475338-74b7b21085ab?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="iPhone">
+      <img src="https://images.unsplash.com/photo-1592750475338-74b7b21085ab?q=80&w=687&auto=format&fit=crop" alt="iPhone">
       <h3>iPhone 14</h3>
       <p>$999</p>
-      <button onclick="addtocart('iPhone 14', 999)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('iPhone 14', 999)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1675452937281-24485562bd84?q=80&w=627&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Samsung S23">
+      <img src="https://images.unsplash.com/photo-1675452937281-24485562bd84?q=80&w=627&auto=format&fit=crop" alt="Samsung S23">
       <h3>Samsung Galaxy S23</h3>
       <p>$799</p>
-      <button onclick="addtocart('Samsung Galaxy S23', 799)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('Samsung Galaxy S23', 799)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1637190909375-85cd40d14161?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="OnePlus 11">
+      <img src="https://images.unsplash.com/photo-1637190909375-85cd40d14161?q=80&w=687&auto=format&fit=crop" alt="OnePlus 11">
       <h3>OnePlus 11</h3>
       <p>$699</p>
-      <button onclick="addtocart('OnePlus 11', 699)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('OnePlus 11', 699)">Add to Cart</button>
     </div>
+
   </section>
 
   <script src="script1.js"></script>
