--- a/watches.html
+++ b/watches.html
@@ -4,13 +4,19 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Watches - MyShop</title>
+
   <link rel="stylesheet" href="style1.css" />
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
   <header>
     <div style="display:flex;align-items:center;gap:12px;">
-      <img src="/mnt/data/b707dae1-1ab4-4e31-8d52-ef1fb87a541f.png" alt="logo" style="height:42px;">
-      <h1>OLIVE STORE</h1>
+      <h1> OLIVE STORE</h1>
     </div>
     <nav>
       <a href="index.html">HOME</a>
@@ -23,24 +29,24 @@
 
   <section class="products">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1622434641406-a158123450f9?q=80&w=2008&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Fossil Watch">
+      <img src="https://images.unsplash.com/photo-1622434641406-a158123450f9?q=80&w=2008&auto=format&fit=crop" alt="Fossil Watch">
       <h3>Fossil Watch</h3>
       <p>$150</p>
-      <button onclick="addtocart('Fossil Watch', 150)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('Fossil Watch', 150)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1577993944451-f8618a835822?q=80&w=706&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Casio Watch">
+      <img src="https://images.unsplash.com/photo-1577993944451-f8618a835822?q=80&w=706&auto=format&fit=crop" alt="Casio Watch">
       <h3>Casio Watch</h3>
       <p>$120</p>
-      <button onclick="addtocart('Casio Watch', 120)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('Casio Watch', 120)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1671014978748-84f661cc2f93?q=80&w=784&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Timex Watch">
+      <img src="https://images.unsplash.com/photo-1671014978748-84f661cc2f93?q=80&w=784&auto=format&fit=crop" alt="Timex Watch">
       <h3>Timex Watch</h3>
       <p>$100</p>
-      <button onclick="addtocart('Timex Watch', 100)">Add to Cart</button>
+      <button class="btn btn-success" onclick="addtocart('Timex Watch', 100)">Add to Cart</button>
     </div>
   </section>
 
